<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_label"
            app:layout_constraintTop_toBottomOf="@id/textViewAuthor"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/imageViewStory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintTop_toBottomOf="@id/textViewYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            app:layout_constraintTop_toBottomOf="@id/imageViewStory"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            app:layout_constraintTop_toBottomOf="@id/buttonPlay"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/buttonStop" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
